# gpaw

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mailmap  .readthedocs.yml  .ruff.toml  CONTRIBUTING.rst  OPTIMIZATION_REPORT.md  PERFORMANCE_ANALYSIS_REPORT.md  README.rst  bse_bug_analysis.tex  config.py  issue-33-gitlab.md  lcao_to_pw.py  mypy.ini  plot_bandstructure.py  plot_mirror_symmetry.py  pyproject.toml  pytest.ini  reproduce_bse.py  reproduce_issue.py  setup.py
.gitlab/merge_request_templates/: template.md
c/: _gpaw.h  _gpaw_so.c  array.h  blacs.c  blas.c  constraints.c  elpa.c  extensions.h  fd_preconditioner.c  fftw.c  gpaw_complex.h  gpaw_elpa.h  gpaw_utils.c  gpaw_utils.h  lcao.c  lfc.c  lfc.h  lfc2.c  magma_cpu.c  magma_gpaw.h  mpa.c  mpi.c  operators.c  operators.h  plane_wave.c  plt.c  point_charges.c  python_forward_declares.h  python_utils.h  spline.c  spline.h  symmetry.c  tetra.c  transformers.c  transformers.h  utilities.c  wigner_seitz.c  woperators.c
c/bmgs/: bmgs.h  cut.c  fd.c  interpolate.c  paste.c  relax.c  restrict.c  spline.c  stencils.c  translate.c  wfd.c  zero.c
c/gpu/: bc.c  blas.c  bmgs.h  cuda.h  gpu-complex.h  gpu-runtime.h  gpu.h  gpu_interface.h  gpu_python.cpp  gpu_python.hpp  gpu_utils.h  hip.h  lfc_gpu.h  magma.c  magma_gpu.c  operators.c  pwlfc-expand.c  setup.c  transformers.c
c/xc/: ensemble_gga.c  libvdwxc.c  libxc.c  m06l.c  pbe.c  pw91.c  revtpss.c  revtpss_c_pbe.c  vdw.c  xc.c  xc_gpaw.h  xc_mgga.c  xc_mgga.h
doc/: Makefile  algorithms.rst  bse_structured_diagonalization.tex  conf.py  contact.rst  ecosystem.rst  ext.py  faq.rst  images.py  index.rst  install.rst  releasenotes.rst  requirements.txt  roadmap.rst  words.txt
doc/devel/: bugs.rst  (+22 more)
gpaw/: __init__.py  _broadcast_imports.py  ah.py  ase_plugin.py  basis_data.py  berryphase.py  bfield.py  blacs.py  borncharges.py  bztools.py  calcinfo.py  calculator.py  cgpaw.py  cluster.py  convergence_criteria.py  densities.py  density.py  dft.py  dipole_correction.py  dos.py  dscf.py  eigensolvers.py  electrostatic_potential.py  elf.py  external.py  fd_operators.py  ffbt.py  fftw.py  helmholtz.py  hgh.py  hubbard.py  hyperfine.py  ibz2bz.py  jellium.py  kohnsham_layouts.py  lfc.py  mixer.py  mom.py  mpi.py  mpi4pywrapper.py  (+28 more)
(+1785 files in other folders)
