[build-system]
requires = ['setuptools >= 77.0.3', 'numpy >= 1.20.0', 'pybind11 >= 2.6.2']
build-backend = 'setuptools.build_meta'

[project]
name = 'gpaw'
description = 'GPAW: DFT and beyond within the projector-augmented wave method'
dynamic = ['version']
readme = 'README.rst'
license = 'GPL-3.0-or-later'
license-files = ['LICENSE']
maintainers = [{ name = 'GPAW Community', email = 'gpaw-users@listserv.fysik.dtu.dk' }]

classifiers = [
    'Development Status :: 6 - Mature',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Physics',
]

requires-python = '>=3.10'

dependencies = [
    'ase >= 3.27.0',  # what about __ase_version_required__?
    'numpy >= 1.20.0',  # Must match build requirement, otherwise older version may be left in place due to "build isolation"
    'scipy >= 1.6.0',
    'gpaw-data',
]

[project.scripts]
gpaw = 'gpaw.cli.main:main'
gpaw-analyse-basis = 'gpaw.lcao.analyse_basis:main'
gpaw-basis = 'gpaw.atom.gpaw_basis:main'
gpaw-plot-parallel-timings = 'gpaw.tools.gpaw_plot_parallel_timings:main'
gpaw-runscript = 'gpaw.tools.gpaw_runscript:main'
gpaw-setup = 'gpaw.atom.gpaw_setup:main'
gpaw-upfplot = 'gpaw.upf:main_plot'

[project.entry-points."ase.ioformats"]
gpaw-log = "gpaw.ase_plugin:io"

[project.optional-dependencies]
docs = [
    'sphinx-rtd-theme',
    'sphinxcontrib-jquery',
    'plotly',
    'kaleido',
    'graphviz',
    'scikit-image',
    'gpaw-web-page-data@git+https://gitlab.com/gpaw/gpaw-web-page-data.git',
]

devel = [
    'flake8',
    'mypy',
    'pytest>=7.0.0',
    'pytest-xdist',
]

[project.urls]
Homepage = 'https://gpaw.readthedocs.io/'
Repository = 'https://gitlab.com/gpaw/gpaw.git'
Issues = 'https://gitlab.com/gpaw/gpaw/issues/'

[tool.setuptools.dynamic]
version = {attr = 'gpaw.__version__'}

[tool.setuptools.packages.find]
# where = ['gpaw']  # why does this fail?

[tool.setuptools.package-data]
gpaw = ['py.typed']

[tool.coverage.report]
exclude_also = [
    'if __name__ == .__main__.:',
    '(abc\\.)?abstractmethod',
    'if TYPE_CHECKING:'
]
